# infrared

./: .dockerignore  .gitignore  CHANGELOG.md  CHANGELOG.txt  Caddyfile  DEPLOY.md  Dockerfile  FLASK_REWRITE_PLAN.md  README.md  app.py  app.wsgi  config-ggm.py  config-marc.py  config-mmap.py  config-tap.py  config.py  docker-compose.ec2.yml  docker-compose.yml  infrared.conf  lp.tpl  pyproject.toml  requirements.txt  solr_query.py  start.sh  utils.py  wsgi.instructions  wsgi.load  wsgi.py
about/: default.html  ggm.html  marc.html  mmap-artifacts.html  mmap-sites.html  mmap.html  stedt.html  tap.html  tbdb.html
configs/: config-ggm.py  config-marc.py  config-mmap-artifacts.py  config-mmap-sites.py  config-mmap.py  config-tap.py  ggm.conf  ggm.toml  marc.conf  marc.toml  mmap-artifacts.conf  mmap-artifacts.toml  mmap-infrared.conf  mmap-sites.conf  mmap-sites.toml  mmap.conf  mmap.toml  projects.conf  sites.toml  tap-infrared.conf  tap.conf  tap.toml  tbdb.conf  tbdb.toml  www.conf
infrared/: __init__.py  cli.py  templating.py
infrared/config/: __init__.py  loader.py  models.py
infrared/search/: __init__.py  repository.py  request.py  response.py
infrared/templates/: about.html  base.html  index.html  record.html  search.html
infrared/templates/components/: _breadcrumbs.html  _facets.html  _footer.html  _nav.html  _pagination.html  _searchbar.html  macros.html
infrared/templates/displays/: full.html  gallery.html  list.html  table.html
infrared/views/: __init__.py  catalog.py  suggest.py
scripts/: convert_configs.py  run_local.py
static/asset/css/: infrared.css  tap-theme.css
static/asset/js/: infrared.js
static/css/: infrared.css  site-theme.css
static/js/: infrared.js
tests/: test_config_parity.py  test_repository.py  test_scaffold.py  test_search_request.py  test_views.py
views/: about.tpl  alerts.tpl  breadcrumbs.tpl  buttons.tpl  content.tpl  footer.tpl  full.tpl  gallery.tpl  head.tpl  home.tpl  images.tpl  index.tpl  input_field.tpl  interactive.tpl  leftpane.tpl  list.tpl  make.tpl  nav.tpl  single.tpl  table.tpl  widgets.tpl
